--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,12 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    
 }
 .wrapper{
     width: 100vw;
     height: 100vh;
     margin: 0 auto;
 }
+
