--- a/src/Content/Content.module.scss
+++ b/src/Content/Content.module.scss
@@ -1,10 +1,7 @@
 .content {
+    position: relative;
     width: 100%;
     height: 100%;
-    background-image: url(../images/map.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 .header {
     width: 100%;
@@ -74,4 +71,7 @@
 .main_content__container{
     width: 100%;
     height: calc(100% - 102px);
+}
+.bg__map{
+    position: absolute;
 }
