--- a/src/Content/Map/Map.module.scss
+++ b/src/Content/Map/Map.module.scss
@@ -1,3 +1,14 @@
-.map__container{
+.map__container {
     font-size: large;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.map {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
