--- a/src/Content/Profile/Profile.module.scss
+++ b/src/Content/Profile/Profile.module.scss
@@ -1,3 +1,7 @@
 .profile__component{
-    
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    background: hsla(20, 6%, 10%, 0.5);
 }
