Что получилось сделать по заданию третей недели.

--- a/src/Content/Content.module.scss
+++ b/src/Content/Content.module.scss
@@ -46,6 +46,7 @@
 }
 .nav_btn {
     cursor: pointer;
+    text-decoration: none;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
