--- a/src/ModalInfo/ModalInfo.module.scss
+++ b/src/ModalInfo/ModalInfo.module.scss
@@ -15,6 +15,8 @@
     justify-content: center;
     align-items: center;
     padding: 20px 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     
     &.active {
         transform: translate(0%, -100%);
